--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <!-- <model-viewer> HTML element -->
-    <model-viewer src="escafandra_V2.gltf" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.png" shadow-intensity="1.17" shadow-softness="1" exposure="1.14" camera-orbit="-21.82deg 82.63deg 9.296m" field-of-view="30deg" environment-image="aircraft_workshop_01_1k.hdr">
+    <model-viewer src="escafandra_V2.gltf" camera-controls poster="poster.png" shadow-intensity="1.17" shadow-softness="1" exposure="1.14" camera-orbit="-21.82deg 82.63deg 9.296m" field-of-view="30deg" environment-image="aircraft_workshop_01_1k.hdr">
       <div class="progress-bar hide" slot="progress-bar">
           <div class="update-bar"></div>
       </div>
